[build-system]
#requires = ['setuptools>=38.3.0']
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tglfpy"
version = "0.1.0"
description = "TGLFPy"
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
keywords = ["fusion", "transport", "simulation", "wrapper"]
authors = [
  { name = "Garud Snoep", email = "gsnoep42@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "scipy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/gsnoep/tglfpy"
"Bug Reports" = "https://github.com/gsnoep/tglfpy/issues"
"Source" = "https://github.com/gsnoep/tglfpy"